plugins {
    id 'com.android.application'
}

def keyProperties = new Properties()
keyProperties.load(new FileInputStream(project.rootProject.file("key.properties")))

android {
    namespace 'net.gitsaibot.af'
    compileSdk 34

    defaultConfig {
        applicationId "net.gitsaibot.af"
        minSdk 24
        targetSdk 34
        versionCode 15
        versionName '2.4'
        buildConfigField("String", "USER_AGENT", "\"" + keyProperties['user_agent'] + "\"")
        buildConfigField("String", "API_KEY", "\"" + keyProperties['apiKey'] + "\"")
        buildConfigField("String", "USER_GEONAMES", "\"" + keyProperties['user_geonames'] + "\"")
        multiDexEnabled true
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
        }
        debug {
            applicationIdSuffix ".debug"
        }
    }
    
    buildFeatures {
        viewBinding true
        buildConfig = true
    }

    lint {
        abortOnError false
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
        coreLibraryDesugaringEnabled true
    }
}

dependencies {
    implementation 'androidx.core:core:1.12.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
    coreLibraryDesugaring("com.android.tools:desugar_jdk_libs:2.0.4")
}
